Add more detailed tooltip to delete partition action.

BUG: 505138